minor fix on mobile styling

--- a/src/components/DashBoard/Dashboard.scss
+++ b/src/components/DashBoard/Dashboard.scss
@@ -5,7 +5,7 @@
 
 .dashboard {
     @include page-padding;
-    margin: 5vw 0;
+    margin: 5vw auto;
     display: flex;
     // flex-direction: column;
     flex-wrap: wrap;
@@ -13,6 +13,7 @@
     &__link {
         text-decoration: none;
         color: $darkblue;
+        margin: auto;
     }
 
     &__card-container {
@@ -20,7 +21,7 @@
         height: 10rem;
         width: 16rem;
         position: relative;
-        margin: 5vw 5vw 20vw 5vw;
+        margin: 5vw auto 20vw auto;
         border-radius: 10px;
         border: solid 1px $darkblue;
         display: flex;
